[metadata]
name = space
version = 1.0.0
url = https://github.com/ramadan8/Space
license = MIT
maintainer = ramadan8
maintainer_email = ramadan8@riseup.net
description = Space File Host
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
	Flask

[options.extras_require]
test =
	pytest

[tool:pytest]
testpaths = tests